feat: dismiss watched and show all watched movies/series button
